added lab and updated pdf

--- a/Lab2_Intro.ipynb
+++ b/Lab2_Intro.ipynb
@@ -514,7 +514,9 @@
     "\n",
     "You should try running many of these simulations and plot their trajectories on a single figure. Launch the Repl.it now and start drifting!\n",
     "\n",
-    "See the README.md file for a couple of directions you should explore and build your intution about. "
+    "See the README.md file for a couple of directions you should explore and build on your intuition for neutral evolutionary dynamics. \n",
+    "\n",
+    "Oh, and you probably want to run these for a little longer than 10 generations!"
    ]
   },
   {
